# aitester-bdd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: architecture.md  ideas.md
docs/guide/: running-tests.md
docs/internals/: authoring.md
examples/quickstart/: README.md  login_smoke.robot  story.txt  wiki_smoke.robot
src/aitester_bdd/: AITester.py  __init__.py  cli.py
src/aitester_bdd/authoring/: __init__.py  agent_loop.py  author.py  playwright_tools.py  tools.py
src/aitester_bdd/discovery/: __init__.py  blackbox.py  whitebox.py
src/aitester_bdd/engine/: README.md  __init__.py  agent_browser_backend.py  aspects.py  browser.py  emit.py  nodriver_backend.py  verdict.py  walk.py  walk_log.py
src/aitester_bdd/llm/: __init__.py  aiagent_adapter.py  base.py
src/aitester_bdd/skill/: SKILL.md
tests/unit/: test_artifact_pipeline.py  test_expansion.py  test_keyword_library.py  test_rule_dag.py  test_semantic_state_check.py  test_walker_with_fake_browser.py
