[project]
name = "aitester-bdd"
version = "0.1.0"
description = "LLM-driven BDD test authoring for Robot Framework — turn an intention + live app into a .robot suite"
readme = "README.md"
authors = [{ name = "kundeng" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["robotframework", "bdd", "testing", "llm", "ai", "test-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: BDD",
]
dependencies = [
    "robotframework>=7.0",
    "robotframework-browser>=18.0",
    "litellm>=1.50",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
aitester = "aitester_bdd.cli:app"

[project.urls]
Homepage = "https://github.com/kundeng/aitester-bdd"
Repository = "https://github.com/kundeng/aitester-bdd"
Issues = "https://github.com/kundeng/aitester-bdd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitester_bdd"]

[tool.hatch.build.targets.wheel.force-include]
"src/aitester_bdd/skill" = "aitester_bdd/skill"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]  # line length handled by formatter
